# video-transcriber

./: README.md  pyproject.toml
src/: server.py
src/static/: style.css
src/templates/: index.html
src/transcribe_video/: __init__.py  cli.py  server.py  transcript.py  translator.py
src/transcribe_video/templates/: index.html
tests/: test_transcript.py  test_translator.py
