[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transcribe-video"
version = "0.1.0"
description = "CLI para transcrever vídeos do YouTube para arquivos .txt"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "youtube-transcript-api>=0.6.2",
    "deep-translator>=1.11.4",
    "flask>=3.0.0",
]

[project.scripts]
transcribe-video = "transcribe_video.cli:main"
transcribe-video-web = "transcribe_video.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/transcribe_video"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]
